--- a/ChatbotRAG.Infrastructure/ChatbotRAG.Infrastructure.csproj
+++ b/ChatbotRAG.Infrastructure/ChatbotRAG.Infrastructure.csproj
@@ -1,7 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.13.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="UglyToad.PdfPig" Version="0.1.9-alpha001-patch1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ChatbotRAG.Domain\ChatbotRAG.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
