--- a/ChatbotRAG/ChatbotRAG.API.csproj
+++ b/ChatbotRAG/ChatbotRAG.API.csproj
@@ -1,7 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.32" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ChatbotRAG.Data\ChatbotRAG.Data.csproj" />
+    <ProjectReference Include="..\ChatbotRAG.Domain\ChatbotRAG.Domain.csproj" />
+    <ProjectReference Include="..\ChatbotRAG.Infrastructure\ChatbotRAG.Infrastructure.csproj" />
+  </ItemGroup>
 
 </Project>
